--- a/index.html
+++ b/index.html
@@ -9,22 +9,47 @@
 <body>
     <div id="site-wrap">
         <div class="header">
-            <img src="" class="logo" alt="logo">
+           <ul class="logo">
+                <li><img src="image/logo_designs/Cocktail002-512.png" class="logo" alt="logo"></li>
+                <li><h1>MIXOLOGY</h1></li>
+           </ul>
             <ul class ="nav">
                 <li class= "active">Home</li>
+                <li>Directory</li>
                 <li>Login</li>
             </ul>
         </div>
-       <div id="main">
+       <div class= "main" id="main">
            <div id="directory">
                <div id= "button-options">
-                    <div><button class= "btn-option" id= "find-btn" type="submit" onClick="return false;" >Find A Recipe!</button></div>
-                    <div><button class= "btn-option" id= "create-btn" type="submit" onClick="return false;" >Create One!</button></div>
-                    <div><button class= "btn-option" id= "random-btn" type="submit" onClick="return false;" >Feeling Adventurous!</button></div>
+                    <div><button class= "btn-option" id= "find-btn" type="submit" onClick="return false"><i class="fa fa-search"></i> Find A Recipe!</button></div>
+                    <div><button class= "btn-option" id= "create-btn" type="submit" onClick="return false;"> <i class= "fa fa-pencil-square-o"></i> Create One!</button></div>
+                    <div><button class= "btn-option" id= "random-btn" type="submit" onClick="return false;"><i class="fa fa-paper-plane"></i> Feeling Adventurous!</button></div>       
                </div>
+              
+               <div id= "form-container"> 
+                    <form class= "form-options" id="find-form" style="display: none;">
+                        <br>
+                        <i class="fa fa-search"></i>
+                        <input type="text" id="find-input" oninput="searchFor()" placeholder="What are you looking for?">
+                        <i onclick= 'clearInput()' class="fa fa-times-circle hide"></i>
+                    </form>
+                    <form class= "form-options" id="create-form" style="display: none;">
+                        <h3>Create a New Drink!</h3>
+                        <input type="text" placeholder="Name"><br>
+                        <input type="text" placeholder="Ingredient"><br>
+                        <input type="text" placeholder="Direction"><br>
+                        <input type="text" placeholder="Glass"><br>
+                        <input type="text" placeholder="Image URL"><br>
+                        <button type="submit">Create</button>
+                    </form>
+                </div>
                <div id="card-container">
                </div>
            </div>
+       </div>
+       <div class="footer">
+        <p> FOOTER </p>
        </div>
     </div>
     <script src="src/script.js"></script>
